2013-02-17 Raphael Neider <rneider AT web.de>

	* device/non-free/lib/pic14/configure.in,
	  device/non-free/lib/pic16/configure.ac:
	  Check and display devices missing in gputils before proceeding
	  and request updating gputils if any to-be-supported is missing
	* device/non-free/lib/pic14/configure,
	  device/non-free/lib/pic16/configure:
	  regenerated

2013-02-13 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl:
	  Use default sfr and sbit names if no header file.

2013-02-10 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Adds used count to sfr, sbit and bit lists.

2013-02-08 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: bugfix

2013-02-03 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Improved recognition of jump tables.

2013-02-03 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Improved recognition of jump tables and
	  bugfix.

2013-02-03 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Bugfix and count of references in the RAM.

2013-02-01 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Small refinements.

2013-01-31 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Use IRAM key in name-list file.

2013-01-29 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Use informations of the OSEG area from map file.

2013-01-28 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: New command option: --name-list

2013-01-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/gen.c,
	  More efficient calls to _Noreturn functions.

2013-01-28 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Improved finds of stack. Prints into
	  map the iRAM.

2013-01-27 Philipp Klaus Krause <pkk AT spth.de>
